cluster/apps/arr-stack/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: "jellyfin.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "ip.fabsys.ovh"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  ingressClassName: nginx-public
  rules:
    - host: jellyfin.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
  tls:
    - hosts:
        - jellyfin.fabsys.ovh
      secretName: jellyfin-tls-certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseerr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    external-dns.alpha.kubernetes.io/hostname: "jellyseerr.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "ip.fabsys.ovh"
spec:
  ingressClassName: nginx-public
  rules:
    - host: jellyseerr.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyseerr
                port:
                  number: 5055
  tls:
    - hosts:
        - jellyseerr.fabsys.ovh
      secretName: jellyseerr-tls-certificate
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: "qbittorrent.int.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "192.168.1.251"
spec:
  ingressClassName: nginx-private
  rules:
    - host: qbittorrent.int.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080
  tls:
    - hosts:
        - qbittorrent.int.fabsys.ovh
      secretName: qbittorrent-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: "prowlarr.int.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "192.168.1.251"
spec:
  ingressClassName: nginx-private
  rules:
    - host: prowlarr.int.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
  tls:
    - hosts:
        - prowlarr.int.fabsys.ovh
      secretName: prowlarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: "radarr.int.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "192.168.1.251"
spec:
  ingressClassName: nginx-private
  rules:
    - host: radarr.int.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878
  tls:
    - hosts:
        - radarr.int.fabsys.ovh
      secretName: radarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: "sonarr.int.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "192.168.1.251"
spec:
  ingressClassName: nginx-private
  rules:
    - host: sonarr.int.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989
  tls:
    - hosts:
        - sonarr.int.fabsys.ovh
      secretName: sonarr-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joal-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod-dns
    external-dns.alpha.kubernetes.io/hostname: "joal.int.fabsys.ovh"
    external-dns.alpha.kubernetes.io/target: "192.168.1.251"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_upgrade = "websocket") {
          rewrite ^/$ /joal break;
      }
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "joal"
spec:
  ingressClassName: nginx-private
  rules:
    - host: joal.int.fabsys.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joal
                port:
                  number: 8080
  tls:
    - hosts:
        - joal.int.fabsys.ovh
      secretName: joal-tls
